# crewai-music

./: README.md  pyproject.toml  report.md  song.md
src/hit2/: crew.py  main.py
src/hit2/config/: tasks.yaml
