[tool.poetry]
name = "hit2"
version = "0.1.0"
description = "hit2 using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }
agentops = "0.3.13"


[tool.poetry.scripts]
hit2 = "hit2.main:run"
run_crew = "hit2.main:run"
train = "hit2.main:train"
replay = "hit2.main:replay"
test = "hit2.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
